<resources>
    <string name="app_name">Venta de Garage JK</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="matriculate">Matricular</string>
    <string name="my_courses">Mis Cursos</string>
    <string name="add_course">Agregar Curso</string>
    <string name="log_out">Salir</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_student">Agregar Estudiante</string>
    <string name="b_squeda">Búsqueda</string>
    <string name="students">Estudiantes</string>
    <string name="sign_in">Sign In</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="products">Productos</string>
    <string name="ventas_de_garage">Ventas de Garage</string>
    <string name="about">Ventas de Garage JK es una aplicación móvil desarrollada
    con el objetivo de poner en práctica distintos componentes móviles y llegar a facilitar el proceso de venta
    de ciertos objetos disponibles en ventas de garage. En el video se encuentran tips útiles para ventas de garage.</string>
</resources>